fixing bugs in head

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
-.head
-{
-align-items: center;
-justify-content: center;
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
