--- a/index.css
+++ b/index.css
@@ -1,3 +1,16 @@
 body {
-    background: yellow;
+    background-color: black;
+    color: green;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding-top: 50px;
+}
+
+h1 {
+    color: cyan;
+    font-size: 48px;
+}
+
+p {
+    font-size: 20px;
 }
