--- a/index.css
+++ b/index.css
@@ -1,16 +1,7 @@
-body {
-    background-color: black;
-    color: green;
-    font-family: Arial, sans-serif;
-    text-align: center;
-    padding-top: 50px;
-}
-
-h1 {
-    color: cyan;
-    font-size: 48px;
-}
-
-p {
-    font-size: 20px;
+.head {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh; /* fills the whole screen */
+    background-color: lightblue;
 }
