--- a/index.css
+++ b/index.css
@@ -1,22 +1,23 @@
 body {
   background-color: rgb(0, 0, 0);
-  color: white;
+  color: rgb(0, 0, 0);
   font-family: Arial, sans-serif;
   text-align: center;
   padding-top: 50px;
 }
 
+
+
+
 h1 {
-  font-size: xx-large;
-  color: rgb(255, 255, 255);
+  
+ font-family: "Silkscreen", sans-serif;
+  color: rgb(30, 255, 0);
 }
 
 h2 {
-  color: rgb(255, 213, 0);
+    font-family: "Pixelify Sans", sans-serif;
+  color: rgb(30, 255, 0);
 }
 
-.visit-counter {
-  margin-top: 20px;
-  font-size: 1.2rem;
-  color: rgb(0, 255, 170);
-}
+
